--- a/paquescolar-web/src/main/webapp/app/con03GraficoAvanceFeria.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con03GraficoAvanceFeria.xhtml
@@ -31,7 +31,7 @@
                             <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
                             <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
                             <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
-                            <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>  
+                            <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>  
                         </p:menubar>
 
                         <h3>
