--- a/paquescolar-web/src/main/webapp/app/con03SaldoProveedores.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con03SaldoProveedores.xhtml
@@ -14,7 +14,7 @@
                         <p:menuitem value="Consultar" icon="fa fa-search" disabled="false" onclick="onClick('btnModificar');"/>
                         <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
                         <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
+                        <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
 
                         <f:facet  name="options">  
                             <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
