--- a/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoProvReports.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoProvReports.xhtml
@@ -11,7 +11,7 @@
             <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
             <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
             <p:menuitem value="Imprimir" icon="fa fa-print" actionListener="#{graficoController.generarReportesExcel}" ajax="false"/>
-            <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>  
+            <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>  
 
             <f:facet  name="options">  
                 <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
