--- a/paquescolar-web/src/main/webapp/app/edit06Seguimiento.xhtml
+++ b/paquescolar-web/src/main/webapp/app/edit06Seguimiento.xhtml
@@ -13,7 +13,7 @@
                         update="pnlFiltro pnlEstado " disabled="true"/>
             <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
             <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
-            <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>  
+            <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>  
 
             <f:facet  name="options">  
                 <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
