--- a/paquescolar-web/src/main/webapp/app/reg04AprobacionModificatoria.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg04AprobacionModificatoria.xhtml
@@ -18,7 +18,7 @@
                         <p:menuitem value="Guardar" icon="fa fa-save" action="#{modificatoriaController.aprobarModificatoria}" 
                                     ajax="true"/>
                         <p:menuitem value="Imprimir" icon="fa fa-print" ajax="false" action="#{modificatoriaController.imprimirDocumentos}" />
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
+                        <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
 
                         <f:facet  name="options" class="centradoVertical">  
                             <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
