--- a/paquescolar-web/src/main/webapp/app/reg07Reintegro.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07Reintegro.xhtml
@@ -14,7 +14,7 @@
                         <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar" action="#{pagoProveedoresController.editarReintegro}" update="pnlFiltro" />
                         <p:menuitem value="Guardar" icon="fa fa-save" action="#{pagoProveedoresController.guardarReintegro}"/>
                         <p:menuitem value="Imprimir" icon="fa fa-print" ajax="false" action="#{pagoProveedoresController.impRptReintegro}"/>
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
+                        <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
 
                         <f:facet  name="options" class="centradoVertical">  
                             <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
