--- a/paquescolar-web/src/main/webapp/app/reg08EntidadFinanciera.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg08EntidadFinanciera.xhtml
@@ -17,7 +17,7 @@
                                     disabled="#{menuController.usuarioSoloLectura}"
                                     update="listaEntidades formulario_entidad" />
                         <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
+                        <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
 
                         <f:facet  name="options" class="centradoVertical">  
                             <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
